--- a/board/am42x_core/project_example/project_keil5/example_am42x_core.uvprojx
+++ b/board/am42x_core/project_example/project_keil5/example_am42x_core.uvprojx
@@ -10,7 +10,8 @@
       <TargetName>debug</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060061::V5.06 update 1 (build 61)::ARMCC</pCCUsed>
+      <pCCUsed>5060750::V5.06 update 6 (build 750)::ARMCC</pCCUsed>
+      <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>ZSL42x</Device>
@@ -125,47 +126,6 @@
             <HexOffset>0</HexOffset>
             <Oh166RecLen>16</Oh166RecLen>
           </OPTHX>
-          <Simulator>
-            <UseSimulator>0</UseSimulator>
-            <LoadApplicationAtStartup>1</LoadApplicationAtStartup>
-            <RunToMain>1</RunToMain>
-            <RestoreBreakpoints>1</RestoreBreakpoints>
-            <RestoreWatchpoints>1</RestoreWatchpoints>
-            <RestoreMemoryDisplay>1</RestoreMemoryDisplay>
-            <RestoreFunctions>1</RestoreFunctions>
-            <RestoreToolbox>1</RestoreToolbox>
-            <LimitSpeedToRealTime>0</LimitSpeedToRealTime>
-            <RestoreSysVw>1</RestoreSysVw>
-          </Simulator>
-          <Target>
-            <UseTarget>1</UseTarget>
-            <LoadApplicationAtStartup>1</LoadApplicationAtStartup>
-            <RunToMain>1</RunToMain>
-            <RestoreBreakpoints>1</RestoreBreakpoints>
-            <RestoreWatchpoints>1</RestoreWatchpoints>
-            <RestoreMemoryDisplay>1</RestoreMemoryDisplay>
-            <RestoreFunctions>0</RestoreFunctions>
-            <RestoreToolbox>1</RestoreToolbox>
-            <RestoreTracepoints>1</RestoreTracepoints>
-            <RestoreSysVw>1</RestoreSysVw>
-          </Target>
-          <RunDebugAfterBuild>0</RunDebugAfterBuild>
-          <TargetSelection>1</TargetSelection>
-          <SimDlls>
-            <CpuDll></CpuDll>
-            <CpuDllArguments></CpuDllArguments>
-            <PeripheralDll></PeripheralDll>
-            <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile></InitializationFile>
-          </SimDlls>
-          <TargetDlls>
-            <CpuDll></CpuDll>
-            <CpuDllArguments></CpuDllArguments>
-            <PeripheralDll></PeripheralDll>
-            <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile></InitializationFile>
-            <Driver>BIN\UL2CM3.DLL</Driver>
-          </TargetDlls>
         </DebugOption>
         <Utilities>
           <Flash1>
@@ -224,6 +184,8 @@
             <hadXRAM>0</hadXRAM>
             <uocXRam>0</uocXRam>
             <RvdsVP>0</RvdsVP>
+            <RvdsMve>0</RvdsMve>
+            <RvdsCdeCp>0</RvdsCdeCp>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -364,11 +326,15 @@
             <uThumb>0</uThumb>
             <uSurpInc>0</uSurpInc>
             <uC99>1</uC99>
+            <uGnu>0</uGnu>
             <useXO>0</useXO>
             <v6Lang>3</v6Lang>
             <v6LangP>3</v6LangP>
             <vShortEn>0</vShortEn>
             <vShortWch>0</vShortWch>
+            <v6Lto>0</v6Lto>
+            <v6WtE>0</v6WtE>
+            <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define>AM_VDEBUG AM_CORTEX_M0</Define>
@@ -386,6 +352,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>0</uSurpInc>
             <useXO>0</useXO>
+            <ClangAsOpt>1</ClangAsOpt>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define></Define>
@@ -992,11 +959,6 @@
               <FilePath>..\..\..\..\soc\zlg\drivers\source\lcd\am_zsl42x_lcd.c</FilePath>
             </File>
             <File>
-              <FileName>am_zsl42x_lptim_timing.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\zlg\drivers\source\lptim\am_zsl42x_lptim_timing.c</FilePath>
-            </File>
-            <File>
               <FileName>amhw_zsl42x_lpuart.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\zlg\drivers\source\lpuart\hw\amhw_zsl42x_lpuart.c</FilePath>
@@ -1235,21 +1197,6 @@
               <FileName>demo_zsl42x_core_std_led.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\am42x_core\led\demo_zsl42x_core_std_led.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_zsl42x_core_std_lptim_timing_gate.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\board\am42x_core\lptimer\demo_zsl42x_core_std_lptim_timing_gate.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_zsl42x_core_std_lptim0_timing.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\board\am42x_core\lptimer\demo_zsl42x_core_std_lptim0_timing.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_zsl42x_core_std_lptim1_timing.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\board\am42x_core\lptimer\demo_zsl42x_core_std_lptim1_timing.c</FilePath>
             </File>
             <File>
               <FileName>demo_zsl42x_core_hw_lpuart_int.c</FileName>
@@ -2437,11 +2384,6 @@
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsl42x_led_gpio.c</FilePath>
             </File>
             <File>
-              <FileName>am_hwconf_zsl42x_lptim.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsl42x_lptim.c</FilePath>
-            </File>
-            <File>
               <FileName>am_hwconf_zsl42x_lpuart.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsl42x_lpuart.c</FilePath>
@@ -2640,6 +2582,7 @@
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
       <pCCUsed>5060061::V5.06 update 1 (build 61)::ARMCC</pCCUsed>
+      <uAC6>8</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>ZSL42x</Device>
@@ -2754,47 +2697,6 @@
             <HexOffset>0</HexOffset>
             <Oh166RecLen>16</Oh166RecLen>
           </OPTHX>
-          <Simulator>
-            <UseSimulator>0</UseSimulator>
-            <LoadApplicationAtStartup>1</LoadApplicationAtStartup>
-            <RunToMain>1</RunToMain>
-            <RestoreBreakpoints>1</RestoreBreakpoints>
-            <RestoreWatchpoints>1</RestoreWatchpoints>
-            <RestoreMemoryDisplay>1</RestoreMemoryDisplay>
-            <RestoreFunctions>1</RestoreFunctions>
-            <RestoreToolbox>1</RestoreToolbox>
-            <LimitSpeedToRealTime>0</LimitSpeedToRealTime>
-            <RestoreSysVw>1</RestoreSysVw>
-          </Simulator>
-          <Target>
-            <UseTarget>1</UseTarget>
-            <LoadApplicationAtStartup>1</LoadApplicationAtStartup>
-            <RunToMain>1</RunToMain>
-            <RestoreBreakpoints>1</RestoreBreakpoints>
-            <RestoreWatchpoints>1</RestoreWatchpoints>
-            <RestoreMemoryDisplay>1</RestoreMemoryDisplay>
-            <RestoreFunctions>0</RestoreFunctions>
-            <RestoreToolbox>1</RestoreToolbox>
-            <RestoreTracepoints>1</RestoreTracepoints>
-            <RestoreSysVw>1</RestoreSysVw>
-          </Target>
-          <RunDebugAfterBuild>0</RunDebugAfterBuild>
-          <TargetSelection>1</TargetSelection>
-          <SimDlls>
-            <CpuDll></CpuDll>
-            <CpuDllArguments></CpuDllArguments>
-            <PeripheralDll></PeripheralDll>
-            <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile></InitializationFile>
-          </SimDlls>
-          <TargetDlls>
-            <CpuDll></CpuDll>
-            <CpuDllArguments></CpuDllArguments>
-            <PeripheralDll></PeripheralDll>
-            <PeripheralDllArguments></PeripheralDllArguments>
-            <InitializationFile></InitializationFile>
-            <Driver>BIN\UL2CM3.DLL</Driver>
-          </TargetDlls>
         </DebugOption>
         <Utilities>
           <Flash1>
@@ -2853,6 +2755,8 @@
             <hadXRAM>0</hadXRAM>
             <uocXRam>0</uocXRam>
             <RvdsVP>0</RvdsVP>
+            <RvdsMve>0</RvdsMve>
+            <RvdsCdeCp>0</RvdsCdeCp>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -2993,11 +2897,15 @@
             <uThumb>0</uThumb>
             <uSurpInc>0</uSurpInc>
             <uC99>1</uC99>
+            <uGnu>0</uGnu>
             <useXO>0</useXO>
             <v6Lang>0</v6Lang>
             <v6LangP>0</v6LangP>
             <vShortEn>0</vShortEn>
             <vShortWch>0</vShortWch>
+            <v6Lto>0</v6Lto>
+            <v6WtE>0</v6WtE>
+            <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define>AM_VDEBUG AM_CORTEX_M0</Define>
@@ -3015,6 +2923,7 @@
             <NoWarn>0</NoWarn>
             <uSurpInc>0</uSurpInc>
             <useXO>0</useXO>
+            <ClangAsOpt>1</ClangAsOpt>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define></Define>
@@ -3621,11 +3530,6 @@
               <FilePath>..\..\..\..\soc\zlg\drivers\source\lcd\am_zsl42x_lcd.c</FilePath>
             </File>
             <File>
-              <FileName>am_zsl42x_lptim_timing.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\zlg\drivers\source\lptim\am_zsl42x_lptim_timing.c</FilePath>
-            </File>
-            <File>
               <FileName>amhw_zsl42x_lpuart.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\zlg\drivers\source\lpuart\hw\amhw_zsl42x_lpuart.c</FilePath>
@@ -3864,21 +3768,6 @@
               <FileName>demo_zsl42x_core_std_led.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\examples\board\am42x_core\led\demo_zsl42x_core_std_led.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_zsl42x_core_std_lptim_timing_gate.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\board\am42x_core\lptimer\demo_zsl42x_core_std_lptim_timing_gate.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_zsl42x_core_std_lptim0_timing.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\board\am42x_core\lptimer\demo_zsl42x_core_std_lptim0_timing.c</FilePath>
-            </File>
-            <File>
-              <FileName>demo_zsl42x_core_std_lptim1_timing.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\examples\board\am42x_core\lptimer\demo_zsl42x_core_std_lptim1_timing.c</FilePath>
             </File>
             <File>
               <FileName>demo_zsl42x_core_hw_lpuart_int.c</FileName>
@@ -5066,11 +4955,6 @@
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsl42x_led_gpio.c</FilePath>
             </File>
             <File>
-              <FileName>am_hwconf_zsl42x_lptim.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsl42x_lptim.c</FilePath>
-            </File>
-            <File>
               <FileName>am_hwconf_zsl42x_lpuart.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsl42x_lpuart.c</FilePath>
@@ -5265,5 +5149,26 @@
       </Groups>
     </Target>
   </Targets>
+
+  <RTE>
+    <apis/>
+    <components/>
+    <files/>
+  </RTE>
+
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>&lt;Project Info&gt;</LayName>
+        <LayDesc></LayDesc>
+        <LayUrl></LayUrl>
+        <LayKeys></LayKeys>
+        <LayCat></LayCat>
+        <LayLic></LayLic>
+        <LayTarg>0</LayTarg>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
 
 </Project>
